--- a/jupyter.ipynb
+++ b/jupyter.ipynb
@@ -13,8 +13,8 @@
     "collapsed": true
    },
    "source": [
-    "In this guided project, we'll work with exit surveys from employees of the Department of Education, Training and Employment (DETE) and the Technical and Further Education (TAFE) institute in Queensland, Australia.\n",
-    "In this project, we'll play the role of data analyst and pretend our stakeholders want to know the following:\n",
+    "In this  project, we'll work with exit surveys from employees of the Department of Education, Training and Employment (DETE) and the Technical and Further Education (TAFE) institute in Queensland, Australia.\n",
+    "In this project, our stakeholders want to know the following:\n",
     "\n",
     "1. Are employees who only worked for the institutes for a short period of time resigning due to some kind of dissatisfaction? What about employees who have been there longer?\n",
     "2. Are younger employees resigning due to some kind of dissatisfaction? What about older employees?"
